JAMES-2435 Website `how to` for SMTP hooks

--- a/src/homepage/howTo/index.html
+++ b/src/homepage/howTo/index.html
@@ -73,6 +73,13 @@ layout: howTo
                class="james-schema" >
               <span class="fa fa-sitemap"></span>Configure Custom Listeners<span class="fa fa-long-arrow-right"></span>
             </a>
+            <a href="custom-smtp-hooks.html"
+               data-lightbox="james-schema"
+               data-title="Configure Custom SMTP hooks"
+               alt="Configure Custom SMTP hooks"
+               class="james-schema" >
+              <span class="fa fa-sitemap"></span>Configure Custom SMTP hooks<span class="fa fa-long-arrow-right"></span>
+            </a>
 
             <br/>
             <br/>
