JAMES-2435 Website how to: creating custom SMTP commands

--- a/src/homepage/howTo/index.html
+++ b/src/homepage/howTo/index.html
@@ -58,7 +58,7 @@ layout: howTo
             <header class="major">
               <h2>Customize James</h2>
             </header>
-            <p class="align-left">This section will show you how to modify James to use it in your purpose</p>
+            <p class="align-left">This section will show you how to modify James to use it in your purpose, and embed your own code.</p>
             <a href="mail-processing.html"
                data-lightbox="james-schema"
                data-title="Customized mail processing"
@@ -79,6 +79,14 @@ layout: howTo
                alt="Configure Custom SMTP hooks"
                class="james-schema" >
               <span class="fa fa-sitemap"></span>Configure Custom SMTP hooks<span class="fa fa-long-arrow-right"></span>
+            </a>
+            <br/>
+            <a href="custom-smtp-commands.html"
+               data-lightbox="james-schema"
+               data-title="Configure Custom SMTP commands"
+               alt="Configure Custom SMTP commands"
+               class="james-schema" >
+              <span class="fa fa-sitemap"></span>Configure Custom SMTP commands<span class="fa fa-long-arrow-right"></span>
             </a>
 
             <br/>
