JAMES-2435 WebSite how to: creating custom WebAdmin routes

--- a/src/homepage/howTo/index.html
+++ b/src/homepage/howTo/index.html
@@ -88,6 +88,13 @@ layout: howTo
                class="james-schema" >
               <span class="fa fa-sitemap"></span>Configure Custom SMTP commands<span class="fa fa-long-arrow-right"></span>
             </a>
+            <a href="custom-webadmin-routes.html"
+               data-lightbox="james-schema"
+               data-title="Configure Custom WebAdmin routes"
+               alt="Configure Custom WebAdmin routes"
+               class="james-schema" >
+              <span class="fa fa-sitemap"></span>Configure Custom WebAdmin routes<span class="fa fa-long-arrow-right"></span>
+            </a>
 
             <br/>
             <br/>
