JAMES-2435 Website how to: Custom James server assembly

--- a/src/homepage/howTo/index.html
+++ b/src/homepage/howTo/index.html
@@ -95,6 +95,13 @@ layout: howTo
                class="james-schema" >
               <span class="fa fa-sitemap"></span>Configure Custom WebAdmin routes<span class="fa fa-long-arrow-right"></span>
             </a>
+            <a href="custom-james-assembly.html"
+               data-lightbox="james-schema"
+               data-title="Write Custom James server assembly"
+               alt="Write Custom James server assembly"
+               class="james-schema" >
+              <span class="fa fa-sitemap"></span>Write Custom James server assembly<span class="fa fa-long-arrow-right"></span>
+            </a>
 
             <br/>
             <br/>
