JAMES-3632 Fix dead link

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -108,7 +108,7 @@ layout: default
                 The Apache James project wires together the different libraries composing James to provide a running services,
                 ready to download on the Apache mirrors. See
                 <a href="download.cgi">our download page</a>.<br/><br/>
-                Follow <a href="install.html">our installation guide</a>.
+                Follow <a href="server/install.html">our installation guide</a>.
               </span></li>
             </ul>
           </section>
