JAMES-3862 Do not use telnet for IMAP demos

--- a/src/homepage/howTo/custom-listeners.html
+++ b/src/homepage/howTo/custom-listeners.html
@@ -217,7 +217,7 @@ $ exit
                     We can see its flags by using the following IMAP command on your local host.
                 </p>
                 <pre><code>
-$ telnet localhost 143
+$ openssl s_client -connect localhost:993
 
 # Login by user2
 A1 LOGIN user2@james.local password2
