--- a/src/homepage/howTo/index.html
+++ b/src/homepage/howTo/index.html
@@ -47,6 +47,13 @@ layout: howTo
                class="james-schema" >
               <span class="fa fa-sitemap"></span>Configuring &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SPF&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="fa fa-long-arrow-right"></span>
             </a>
+            <a href="dkim.html"
+               data-lightbox="james-schema"
+               data-title="Configuring DKIM"
+               alt="Configuring DKIM"
+               class="james-schema" >
+              <span class="fa fa-sitemap"></span>Configuring &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DKIM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="fa fa-long-arrow-right"></span>
+            </a>            
             <a href="deleted-messages-vault.html"
                data-lightbox="james-schema"
                data-title="Deleted Messages Vault"
