--- a/src/homepage/howTo/dkim.html
+++ b/src/homepage/howTo/dkim.html
@@ -41,7 +41,7 @@ layout: howTo
                 </p>
 
                 <p>
-                  Once the signature is verified with the public key by the recipient server, the message passes DKIM and is considered authentic.
+                  Once the signature is verified with the public key by the recipient server, the message passes the DKIM check and is considered authentic.
                 </p>
 
                 <p>
