--- a/src/homepage/howTo/dkim.html
+++ b/src/homepage/howTo/dkim.html
@@ -75,7 +75,7 @@ layout: howTo
                   You can use tools such as <code>openssl</code> or <code>ssh-keygen</code> to generate RSA keys.
                 </p>
                 <p>
-                 Please note that 1024 bit DKIM is still the standard. If you want to feel safer with 2048-bit RSA, check with DNS provider and see what length of DKIM key is supported because they need to match.
+                 Please note that 1024 bit DKIM is still the standard. If you want to feel safer with 2048-bit RSA, check with your DNS provider and see what length of DKIM key is supported because they need to match.
                 </p>
                 <p>Generate a 1024 bit RSA Key:</p>
 
