--- a/src/homepage/howTo/dkim.html
+++ b/src/homepage/howTo/dkim.html
@@ -134,7 +134,7 @@ Text: v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNAD[...Your Public Key...]
 
 <h1><b>Configure DKIMSign mailet</b></h1>
 
-<p>Lastly, you need to add a maillet to the <code>mailletcontainer.xml</code> in the /conf file of Apache James.</p>
+<p>Lastly, you need to add a maillet to the <code>mailetcontainer.xml</code> in the /conf file of Apache James.</p>
 
 
 
