Fix line alignment

--- a/src/homepage/howTo/spf.html
+++ b/src/homepage/howTo/spf.html
@@ -150,7 +150,9 @@ layout: howTo
 &lt;/processor&gt;
 
 [...]</code></pre>
-
+<p>
+  Finished configuring SPF ? Go check our guide for  <a href="dkim.html">configuring DKIM Record</a>.
+</p>
             </div>
             <footer class="major">
                 <ul class="actions align-center">
