--- a/src/homepage/howTo/spf.html
+++ b/src/homepage/howTo/spf.html
@@ -156,11 +156,11 @@ layout: howTo
             </div>
             <footer class="major">
                 <ul class="actions align-center">
-                    <li><a href="index.html" class="button">go back to other how-tos</a></li>
+                    <li><a href="index.html" class="button">go back to other how-adasdasdetos</a></li>
                 </ul>
             </footer>
         </div>
-    </section>
+
 
 </div>
 
