Add mail-tester ref link

--- a/src/homepage/howTo/imap-server.html
+++ b/src/homepage/howTo/imap-server.html
@@ -90,10 +90,15 @@ layout: howTo
                 </p>
 
                 <p>That is what PTR Record do - A reverse lookup which maps the mailserver IP address to domain name.</p>
-                <p>PTR Record can only be created by your ISP - So don't hesitate to ask them to create a PTR record for you.</p>
+                <p>PTR Record can only be created by your ISP - So don't hesitate to ask them to create it for you.</p>
                 
                 <p>
-                    Also for Security and Spam Protection, please check our other documents <a href="spf.html">SPF Record</a> and  <a href="dkim.html">DKIM Record</a>.
+                    For Security and Spam Protection, please check our other documents <a href="spf.html">SPF Record</a> and  <a href="dkim.html">DKIM Record</a>. 
+                </p>
+
+                <p>
+                    For testing and checking vulnerabilities, send an email to <a href="https://www.mail-tester.com/">mail-tester</a>. 
+                    It's a free tool that analyze your message, mail server, sending IP... and show you a detailed report of what's configured properly and what's not.
                 </p>
                 <header class="major">
                     <h2><b>JAMES architecture</b></h2>
