JAMES-3644 Better document outgoing email setup (#651)

--- a/src/homepage/howTo/spf.html
+++ b/src/homepage/howTo/spf.html
@@ -150,15 +150,17 @@ layout: howTo
 &lt;/processor&gt;
 
 [...]</code></pre>
-
+<p>
+  Finished configuring SPF ? Go check our guide for  <a href="dkim.html">configuring DKIM Record</a>.
+</p>
             </div>
             <footer class="major">
                 <ul class="actions align-center">
-                    <li><a href="index.html" class="button">go back to other how-tos</a></li>
+                    <li><a href="index.html" class="button">go back to other how-adasdasdetos</a></li>
                 </ul>
             </footer>
         </div>
-    </section>
+
 
 </div>
 
