fixup! JAMES-3644 Link for SPF and DKIM

--- a/src/homepage/howTo/imap-server.html
+++ b/src/homepage/howTo/imap-server.html
@@ -222,7 +222,7 @@ docker exec james_run java -jar /root/james-cli.jar AddUser user@domain.tld secr
                     <a href="http://james.apache.org/server/metrics.html">metric display</a>, collect logs in ElasticSearch for a display in Kibana,
                 and much more!</p>
 
-                <p>Also, James offers support for <a href="sp.html">SPF</a>
+                <p>Also, James offers support for <a href="spf.html">SPF</a>
                     and <a hre="dkim.html">DKIM</a> standard, which increase the trust external people can get in your mail system.</p>
 
             </div>
