--- a/src/homepage/howTo/imap-server.html
+++ b/src/homepage/howTo/imap-server.html
@@ -223,7 +223,7 @@ docker exec james_run java -jar /root/james-cli.jar AddUser user@domain.tld secr
                 and much more!</p>
 
                 <p>Also, James offers support for <a href="spf.html">SPF</a>
-                    and <a hre="dkim.html">DKIM</a> standards, which increase the trust external people can get in your mail system.</p>
+                    and <a href="dkim.html">DKIM</a> standards, which increase the trust external people can get in your mail system.</p>
 
             </div>
             <footer class="major">
