JAMES-3644 Link for SPF and DKIM (#657)
Co-authored-by: Rene Cordier <rene.cordier@gmail.com>
Co-authored-by: Raphaël Ouazana <raphael.ouazana@gmail.com>

--- a/src/homepage/howTo/imap-server.html
+++ b/src/homepage/howTo/imap-server.html
@@ -222,8 +222,8 @@ docker exec james_run java -jar /root/james-cli.jar AddUser user@domain.tld secr
                     <a href="http://james.apache.org/server/metrics.html">metric display</a>, collect logs in ElasticSearch for a display in Kibana,
                 and much more!</p>
 
-                <p>Also, James offers support for <a href="https://medium.com/linagora-engineering/installing-james-3-0-with-spf-verification-421b26b92f11">SPF</a>
-                    and DKIM standard, which increase the trust external people can get in your mail system.</p>
+                <p>Also, James offers support for <a href="spf.html">SPF</a>
+                    and <a href="dkim.html">DKIM</a> standards, which increase the trust external people can get in your mail system.</p>
 
             </div>
             <footer class="major">
