--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -175,10 +175,9 @@ WHAT WILL YOU TRY:</b><br>
                   <li><span class="long-arrow-right">&#8594;</span><span>Improve developper experience with a migration to the Gradle
                     build system and Apache hosted automated builds. A summary of community call describing this item can be found
                     <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
-                  <li><span class="long-arrow-right">&#8594;</span><span>Update the currently implemented JMAP draft specification
-                    to the <b>new JMAP RFC</b>. See this
-                    <a href="https://github.com/apache/james-project/blob/master/src/adr/0018-jmap-new-specs.md">ADR</a>
-                    for more information.</span></li>
+                  <li><span class="long-arrow-right">&#8594;</span><span>Continue improving <b>JMAP
+                    <a href="https://datatracker.ietf.org/doc/html/rfc8621">RFC-8621</a></b> support.
+                    See this <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a>for more information.</span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Enhance our eventual consistency model by providing
                     <b>tools for reparing projections</b>. See this
                     <a href="https://github.com/linagora/james-project/pull/3125">discussion</a> for more information.</span></li>
