--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -177,11 +177,10 @@ WHAT WILL YOU TRY:</b><br>
                     <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Continue improving <b>JMAP
                     <a href="https://datatracker.ietf.org/doc/html/rfc8621">RFC-8621</a></b> support.
-                    See this <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a>for more information.</span></li>
-                  <li><span class="long-arrow-right">&#8594;</span><span>Enhance our eventual consistency model by providing
-                    <b>tools for reparing projections</b>. See this
-                    <a href="https://github.com/linagora/james-project/pull/3125">discussion</a> for more information.</span></li>
-                  <li><span class="long-arrow-right">&#8594;</span><span>Feel free to add your own items here: see <a href="#third">Contribute</a>.</span></li>
+                    <a href="https://james.staged.apache.org/james-project/3.7.0/servers/distributed/operate/guide.html#_solving_cassandra_inconsistencies">Here</a>
+                    are implemented consistency tasks.
+                    See this <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a>for some further possible
+                    developments, especially regarding IMAP.</span></li>
                 </ul>
               </span>
               </li>
