[SITE] Update roadmap: Preview Antora documentation

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -171,7 +171,8 @@ WHAT WILL YOU TRY:</b><br>
                     specify it on a per-server basis for ease of use.<br/>
                     We will furthermore target servers to identified use cases, formulated in non technical terms: Basic Server, Advanced Server and Distributed Server.<br/>
                     Spring server will be deprecated. A summary of community call describing this item can be found
-                    <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
+                    <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.
+                    <a href="https://james.staged.apache.org/james-project/3.7.0/servers/index.html">Preview</a>...</span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Improve developper experience with a migration to the Gradle
                     build system and Apache hosted automated builds. A summary of community call describing this item can be found
                     <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
