--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -177,11 +177,9 @@ WHAT WILL YOU TRY:</b><br>
                     build system and Apache hosted automated builds. A summary of community call describing this item can be found
                     <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Continue improving <b>JMAP
-                    <a href="https://datatracker.ietf.org/doc/html/rfc8621">RFC-8621</a></b> support.
-                    <a href="https://james.staged.apache.org/james-project/3.7.0/servers/distributed/operate/guide.html#_solving_cassandra_inconsistencies">Here</a>
-                    are implemented consistency tasks.
-                    See this <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a>for some further possible
-                    developments, especially regarding IMAP.</span></li>
+                    <a href="https://datatracker.ietf.org/doc/html/rfc8621">RFC-8621</a></b> support. See this
+                    <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a>for some further possible
+                    developments</span></li>
                 </ul>
               </span>
               </li>
