--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -175,8 +175,12 @@ WHAT WILL YOU TRY:</b><br>
                     <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Continue improving <b>JMAP
                     <a href="https://datatracker.ietf.org/doc/html/rfc8621">RFC-8621</a></b> support. See this
-                    <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a>for some further possible
+                    <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a> for some further possible
                     developments</span></li>
+
+                  <li><span class="long-arrow-right">&#8594;</span><span>Feel free to add your own items here:
+                    see <a href="#third">Contribute</a>.</span></li>
+
                 </ul>
               </span>
               </li>
