[SITE] Update roadmap: Details guice adoption schedule

--- a/src/homepage/index.html
+++ b/src/homepage/index.html
@@ -172,7 +172,13 @@ WHAT WILL YOU TRY:</b><br>
                     We will furthermore target servers to identified use cases, formulated in non technical terms: Basic Server, Advanced Server and Distributed Server.<br/></span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Promote guice based applications.<br/>
                     Spring server will be deprecated. A summary of community call describing this item can be found
-                    <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.</span></li>
+                    <a href="https://www.mail-archive.com/server-dev@james.apache.org/msg67212.html">here</a>.<br/><br/>
+                    Guice adoption schedule:
+                    <ol>
+                      <li>Promote Guice artifacts on the download page as part of <code>3.7.0</code></li>
+                      <li>Deprecate Spring artifact as part of <code>3.8.0</code></li>
+                      <li>Remove Spring artifact as part of <code>3.9.0</code></li>
+                    </ol></span></li>
                   <li><span class="long-arrow-right">&#8594;</span><span>Continue improving <b>JMAP
                     <a href="https://datatracker.ietf.org/doc/html/rfc8621">RFC-8621</a></b> support. See this
                     <a href="https://issues.apache.org/jira/browse/JAMES-2884">JIRA</a> for some further possible
