JAMES-3664 Fix typos in DKIM example

--- a/src/homepage/howTo/dkim.html
+++ b/src/homepage/howTo/dkim.html
@@ -137,9 +137,9 @@ Text: v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNAD[...Your Public Key...]
       [Your Private Key]
       -----END RSA PRIVATE KEY-----
       &lt;/privateKey&gt;
-    &lt;mailet&gt;
+    &lt;/mailet&gt;
   &lt;/processor&gt;
-&lt;/processor&gt;
+&lt;/processors&gt;
 [...]</code></pre>
 
 <h1><b>Verifying DKIM Record</b></h1>
