[DOCUMENTATION] Example for deploying MUA auto-configuration
 - RFC-6186 Using SRV records
 - Auto-configuration for thunderbirds
 - Notes on JMAP auto-configuration

--- a/src/homepage/howTo/imap-server.html
+++ b/src/homepage/howTo/imap-server.html
@@ -217,6 +217,8 @@ docker exec james_run java -jar /root/james-cli.jar AddUser user@domain.tld secr
                     <h2><b>Additional features</b></h2>
                 </header>
 
+                <p>Check this example on <a href="https://github.com/apache/james-project/tree/master/examples/imap-autoconf">Mail user agents autoconfiguration</a>.</p>
+
                 <p>James is a large project with many features. You can go further and complete your installation with
                 an <a href="http://james.apache.org/server/config-antispam.html">AntiSpam system</a>, or set up
                     <a href="http://james.apache.org/server/metrics.html">metric display</a>, collect logs in ElasticSearch for a display in Kibana,
