[RELEASE] Roll documentation to 3.7.0

--- a/src/homepage/howTo/custom-listeners.html
+++ b/src/homepage/howTo/custom-listeners.html
@@ -131,7 +131,7 @@ $ wget https://raw.githubusercontent.com/apache/james-project/master/dockerfiles
 services:
   james:
     ...
-    image: apache/james:jpa-3.6.2
+    image: apache/james:jpa-latest
                 </code></pre>
                 <p>Add the following volumes for james service:</p>
                 <pre><code>
