JAMES-3771 Homepage: Elastic => OpenSearch rewords

--- a/src/homepage/howTo/custom-listeners.html
+++ b/src/homepage/howTo/custom-listeners.html
@@ -50,7 +50,7 @@ layout: howTo
                     Each time an action is applied on a mailbox(adding, deleting), or on an email(adding, deleting, updating flags...),
                     then an event representing that action is generated and delivered to all the Listeners that had been registered before.
                     After receiving events, listeners retrieve information from the events then execute their business
-                    (Indexing emails in ElasticSearch, updating quota of users, detecting spam emails...)
+                    (Indexing emails in OpenSearch, updating quota of users, detecting spam emails...)
                 </p>
 
                 <p>
