JAMES-3826 Example and documentation

--- a/src/homepage/howTo/index.html
+++ b/src/homepage/howTo/index.html
@@ -102,6 +102,13 @@ layout: howTo
                class="james-schema" >
               <span class="fa fa-sitemap"></span>Configure Custom WebAdmin routes<span class="fa fa-long-arrow-right"></span>
             </a>
+            <a href="custom-healthchecks.html"
+               data-lightbox="james-schema"
+               data-title="Configure Custom Healthchecks"
+               alt="Configure Custom Healthchecks"
+               class="james-schema" >
+              <span class="fa fa-sitemap"></span>Configure Custom Healthchecks<span class="fa fa-long-arrow-right"></span>
+            </a>
             <a href="custom-james-assembly.html"
                data-lightbox="james-schema"
                data-title="Write Custom James server assembly"
